Fixed spacing glitch on tab navigation

--- a/src/components/filterableProjects.sass
+++ b/src/components/filterableProjects.sass
@@ -11,7 +11,7 @@
     position: relative  
     @media (max-width: 400px)
         font-size: 0.9em 
-        padding: 12px
+        padding: 14px
     &::after
         content: ""
         position: absolute
